--- a/yes.html
+++ b/yes.html
@@ -10,7 +10,7 @@
                 <h1 class = "header_text">Yeeeyyyy!!</h1>
             </div>
             <div class="gif_container">
-                <img src="2.jpg">
+                <img src="2.jpg" height="500px>
             </div>
         </div>
        
