--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="gif_container">
                 <img src="1.jpg">
             </div>
-            <div class = "buttons" height="100px>
+            <div class = "buttons" height="100px" width="100px">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
                 <button class="btn" id="noButton" onmouseover="moveButton()" onclick="moveButton()">No</button>
                 <script>
