--- a/yes.html
+++ b/yes.html
@@ -10,7 +10,7 @@
                 <h1 class = "header_text">Yeeeyyyy!!</h1>
             </div>
             <div class="gif_container">
-                <img src="2.jpg" height="100px>
+                <img src="2.jpg" height="100px" width="100px">
             </div>
         </div>
        
