--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <h1 class = "header_text">Hey Kitten Mahsa. Do you wanna hang out and maybe play with yarn together?</h1>
             </div>
             <div class="gif_container">
-                <img src="1.jpg">
+                <img src="1.jpg" height="500px" width="500px">
             </div>
             <div class = "buttons" height="100px" width="100px">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
