--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Hey Kitten Mahsa. Do you wanna hang out and maybe play with yarn together?</h1>
+                <h1 class = "header_text">Hey Kitten Mahsa. Do you wanna hang out get some coffee and maybe play with yarn together?</h1>
             </div>
             <div class="gif_container">
                 <img src="1.jpg" height="500px" width="500px">
